--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,13 @@
 
     <string name="total_videos">Total Videos:</string>
     <string name="total_folders">Total Folders:</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+    <string name="feedback">Feedback</string>
+    <string name="themes">Themes</string>
+    <string name="sort_order">Short Order</string>
+    <string name="about">About</string>
+    <string name="exit">Exit</string>
+    
 </resources>
