Video View UI Design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="about">About</string>
     <string name="exit">Exit</string>
     <string name="nav_text">Welcome to World of Entertainment!</string>
+    <string name="video_name">Video Name</string>
 
 </resources>
