--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
     <string name="nav_text">Welcome to World of Entertainment!</string>
     <string name="video_name">Video Name</string>
     <string name="folder_name">Folder Name</string>
+    <string name="duration">00:00</string>
+    <string name="loading">loading...</string>
+    <string name="semicolon">:</string>
 
 </resources>
